@@ -1,12 +1,22 @@
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r2-3.10.patch1 2982 SHA256 cbe62e86c49dee2430b491295d83c5d08c2e068728f30a0fb714dbaccdd0f48c SHA512 9a34026a88ee26b2372eba0eab1b65f85c0939937c23ee9101466ec433e803433ba888a54e1813e57d650ceba6a6c8d19cd23435ee4e98aa81764965d92b0a52 WHIRLPOOL 68e2fd19c5c8e582538cef6eadefc38f368a2e392339e5dd1110c498059c881f259bbd8e3b149f4ea7490cddcffd5b2a3c6a08013cbd96a427f751dd44e23870
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r2-3.12.patch1 2992 SHA256 ffdcfcc7f9f702589131eeeec864761d27800f36b642a3b650bb2c46b1049aff SHA512 006ab095bd199d771300672bf0863df8b2a631f609898e4182104e85e0f0c8d8124e1e2d1ab6bb8747324afef135554de258965b28b3b71d05fc036463253123 WHIRLPOOL 6de53c970b5536961ba701f297a575d1b3c3027b016496338e5f3392d376c37abea6fe683ace402e310bf0e5b32ddaddd2bac803d4fcd4dcb8c67f9fdf4a5b16
+DIST 0002-block-introduce-the-BFQ-v6r2-I-O-sched-for-3.10.patch1 173976 SHA256 4b5a2136f5a84e541f4de1961a5eee0943f0489b7619746d24ac64a118ca4840 SHA512 360efb5033f2bb14f1fc60217c03511042f0509e05525ac7ea6d471c26012e63969ad6da1b2e0e0a0ad4b800519e3abf4408556049d592ee24ad3a3931b62716 WHIRLPOOL 55ae056b471049a7fa693dffb6427458820c7ce7895857db4455d81245d4fcad1374b7b4a42254d4edd00698a24a0241a8e11b9a05fc91e4fe039c69905f6202
 DIST 0002-block-introduce-the-BFQ-v6r2-I-O-sched-for-3.12.patch1 174362 SHA256 c6ed63e10054a8519cea7e29e5421c4275e5f41faf9e769a833a0f3b4b8029e5 SHA512 bffa292c8825250f90851d8ae264ac48c872442b9f1c02a71eb4f81bb811beddc06ea920505b10a41c1c8584ed9c18846a00c3262f063c49610eab534ee8f03d WHIRLPOOL cd4caaf840fc72dd774dac9773922d6b5aa3347fe85bc405a049ad0bdc6f6f4ab830d84844e158ab0902500a03c7abcaa628e37d6286f5f6331580124a78819a
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.10.0.patch1 35687 SHA256 bce5d8d04ae8384268cad836a70a103bf3c2464acb3c55aa773fb852e2f49036 SHA512 5849f22bcbe5aad0e5df1ffc711b677cca518bf4faeec32d5373ba05806ec79554a382df56859dd380bb1f38baee4e71acfe7c8d524b3b982ec6eec45bbb4f02 WHIRLPOOL e32f8563f486cee2b16d4117c326c04eb0f8518f66d80db512719603d775fe6d19125aaa13290fa511ce39a8ba19a9c2f6c28de9bd46ae17140e8e26b22d63f2
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.12.0.patch1 35687 SHA256 6e22d0bad22b9215f478759f8a0de920b37bd149de31db6b638612e6f50c85e1 SHA512 c0ebf1ac63307e75742ca2d8a2523ce56694629eec1da5a1f4fe884a78bd330a98b45e6a17d6764470de3af48f94d3866d14a83f8cf58de7746b4165a674a68a WHIRLPOOL 06d9b9c9e759635ba182d01d62e08e93c48f05dd3cc66a165194ea9408b851d89a1a6afe8b4c240b0bd9634dfe975956c870a39bfc8285dc426809c5747105fb
+DIST README-3.10.19.BFQ 10454 SHA256 76b613f067b4e784333ab5e1b0999aa40aeaad37230ea6e640d48073cbea3457 SHA512 fcd085ab4c356a25e738625ed19d50a375a30c8c4bd8bac4c5d58231957d3b9b66cb5e143be039a216ec223c0f3f2f1f3edf049e6a48aaf6c85bf97958792bf8 WHIRLPOOL fda44f2e0ac6b029028349935d7a8ceb14948df1d0cc05fcf47f9c382c5289899516c3b516caf7e452ad54c67a1bbe0c9d733391bdee4800e54c59b67cde9584
 DIST README-3.12.0.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
+DIST aufs-sources-3.10_p20131111.tar.xz 151456 SHA256 a5229c12e9cf62a04bc84458df88d4fdb3c4e30e38c184cd2e236b22efe01e6f SHA512 421ac913b40c66dab4ca01da1c08204d1ed78a93e4dba09795f0a081a1af5c30bd82863fafdd034defb840b7961e49713242549c2bbe4d8bddc4c81663b27ff0 WHIRLPOOL c215c4ca78409efe48dea1cae373b645452d16ee8711a00913b52c4796756e90960e3d4a61c0a2b1ddf693aee3e206401f6bf648f0d5af0404cda710ee3d8339
 DIST aufs-sources-3.12_p20131111.tar.xz 152124 SHA256 010b330230b3ce63a4b60b5f049fd3a225518891fce4ac2e4fbd73a02b15a271 SHA512 b34f1d9489748e82d6023ce4b89b87ed7fb4e3b62b99895424f00c241efdc24ff8ccc398ad0558933960fb0c68a61d2bd648d867e95a1ef9617119976422b2e1 WHIRLPOOL db938d8f50d8a5ecd60ddd26422ad851c0d22593b06d113057dec13df30bdb737d00bee888b86cf3c90673301355b6323d7368c7a195ac173be46b2f3411acf7
+DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
 DIST deblob-3.12 120320 SHA256 1d767acd3f461bcaa7ebef744dce1ca3eefde1cd41fde4c69a449e2470ab8c0e SHA512 61073cb763e3e0c21a84c0ee888087fbbf37b667ce0efbbc6c2ebc46ccae8460553511e347cf23d3c3603eec64df738ad4552a1b527453c7d795b8f90c4cf678 WHIRLPOOL c64cc566944ac241149a2a517da069185830be5b8ee25168b2b6b942bcf24fe3f2c0fe487b51a5b7e73e2910af2cabd7167cd1497ab7272c865d1eb3e68e4efe
+DIST deblob-check-3.10 565672 SHA256 748df2cf5c1f012f9942948827e57b12bb05c569cae220416b3c0339520d9855 SHA512 341ea8a755c4f1f42ddbc4e7dfe8d786e8b29f497bee3fd72154c8c1c0bcadcb9efff04f2663090bd8741e5b5baafed26a62b9d16c31f3b31665cd3cd3e779d5 WHIRLPOOL 7e6c8eefa9b44e7d50011a9390baf7999533b4016122992c0ac0722cce05dbb8e4b7e96f1f05e9bfdd2ce3e4c08f0e06c8955b68ed8c044ff75f3a314a405824
 DIST deblob-check-3.12 601108 SHA256 e6c07b4220f86007ea31f9ed5d01023253296ddaa0710e65e08f231eccf6085a SHA512 fb293fb5093c410b319203cf0a65457a3ef28430ad6257b08a6e3eb77011d79708c51121c0a8776f55124259719782b4ac9b4c54155c13bb05a2679541816887 WHIRLPOOL e056b4edccd36911fe415cd1780bb484875a16237dce89316144c8ee07df3253bc19abdbee2e51ab3dd9248682470e80409819584c188e22601026e8df222754
+DIST genpatches-3.10-27.base.tar.xz 371728 SHA256 decbec2608ede58f591a4983d117aa3abb6fd6662c7d3207ee2e13521cd9e99d SHA512 833f195932802486fc0ae5337948a2985e5de2a5d6767b90d1a2705e0390ff113ae07836048205932def118b515e9eedf5c6016d5dbffbbf72910cdafb79ac7c WHIRLPOOL cd749718d3718ac12cffdff1b4ebc30c1fa6f49386b5bdb82077e98f4f10345a8509e1a371e1f4375923a83fd7a7820ca7398c44d157ad2cb9971adfa6ed9172
+DIST genpatches-3.10-27.extras.tar.xz 17764 SHA256 1440283897da3e6bed3c80a723cfed9b43385b0fccc346d142281d87690c78da SHA512 d8643d432f083d6fc7aefb81b43bb6f90fbb48d50dd6f1bd03d8ca516d57f27ec9144fda36d03040c2e47af38a7cb9f6aef47990585b4257a767e5399075058d WHIRLPOOL 119b5cdf27de2e250d1b256821e5b2e3f362642d43710034971c343738b219891795ed938869144ce96b1860680fdabd7d6840ac27d98798274bcd6b7b50150a
 DIST genpatches-3.12-1.base.tar.xz 8084 SHA256 c93fa9908e43601549ae5e959f74934fa408c929532f3aba2c9cf6af0f02da79 SHA512 7542d5b1c102320648a536152f1b02085c3a2ea450dd346c5aa12e1dfff09e56095c0ca797cf539c35ac6c7e4f901dff3b99523fa67e015383021a6ceff2e255 WHIRLPOOL ce6144dd9a4b0dfb2ef55bfab7f3e09f98441a6e9216c5000a0e0e1f3be95e2fd8515e7866eb79608dad6bc5b0a51c28a44e5b363400c391aba5778e92b77551
 DIST genpatches-3.12-1.extras.tar.xz 18152 SHA256 976f1955368e5bac0bfefe97fc6fc53a67ad003da86c22a0eef8860fc8439909 SHA512 edb22af4c538cd02fc4d43cfe5d2eff887a2ba636c50428c2794722cf02fea3bf22b251ddb81da7d2a934331b4d0231fdeb68fd15e6556bf93cc5d743fbdc923 WHIRLPOOL 6dc333619fb6e70f760adab02c820c58295d3d55f6d60252183f3b979d5cffe78fab04f671dbdada6e1134decfefa8440b28def7ca1a68fc2e9fca41db2a329c
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST lh-sources-kernel-312-gcc48-1.patch 14066 SHA256 46c2f360ad3dd54648d81b69c438ec5a0f1b4bd2b873250f61a41fc01c1835fb SHA512 577132b6354ad385449316de045368f9ef3cc3129fc112fa41b869d328a0fe312dd956f674eced52459fb36e4f18087b03dddeb9572a2f7479cb858d0df37a6b WHIRLPOOL 7921e37cc602b6240b6c7587e4d90f934e320159eadb99c8974154a634c548a789ddd6e4b7abd7fdbb9bd85b82fda8efcf32023c732bf08d70f649cef5a12057
+DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
 DIST linux-3.12.tar.xz 76384600 SHA256 2e120ec7fde19fa51dc6b6cc11c81860a0775defcad5a5bf910ed9a50e845a02 SHA512 4ba5797e0772726d05c9f2eee66dc6dc2a5033c749ef44764c805a83da739ed5d0c6443b76785e38fe1ef74cc7ade787e48144faed0cfcb6f124f05248c700ff WHIRLPOOL a40195f6b53ba3440cf90a44495f6a59670f750851d1518e2bdfe3b949f0e898d1df5d37e271c31c555087026ddb6cc2c9109b22b9639e3222735e6f650a1417
