@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.10.19 (19 Nov 2013)
+
+  19 Nov 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.19.ebuild:
+  Add old version back
+
   15 Nov 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.0.ebuild:
   Bump to latest aufs3 release
 
